When user verified and fail to updated status, throw expectation fail(417) and return token null if auto login fails . Updated test accordingly
