# src/main/java/capitec/branch/appointment/user/infrastructure/controller/VerificationDTO.java
@@ -2,10 +2,14 @@ package capitec.branch.appointment.user.infrastructure.controller;
 
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 
 public record VerificationDTO(
         @NotBlank
         @Email String email,
-        String otp
+        @NotBlank
+        String otp,
+        @NotNull
+        Boolean isCapitecClient
 ) {
 }
